--- a/.github/workflows/deployment-hostinger.yml
+++ b/.github/workflows/deployment-hostinger.yml
@@ -2,7 +2,7 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build-and-deploy:
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Main Branch
         uses: actions/checkout@v2
         with:
-          ref: 'main'
+          ref: 'master'
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
