changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dengue-dashboards",
+  "name": "record-label-manager",
   "private": true,
   "version": "0.0.0",
   "type": "module",
