--- a/package.json
+++ b/package.json
@@ -6,19 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "serve": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "test": "mocha-headless-chrome -a enable-features=SharedArrayBuffer",
+    "prepublishOnly": "npm run build",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/types": "^0.12.2",
     "@ffmpeg/util": "^0.12.1",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
-    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
@@ -39,6 +42,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "chai": "^4.3.7",
+    "http-server": "^14.1.1",
+    "mocha": "^10.2.0",
+    "mocha-headless-chrome": "^4.0.0",
+    "npm-run-all": "^4.1.5",
+    "start-server-and-test": "^2.0.3"
   }
 }
