--- a/package.json
+++ b/package.json
@@ -38,16 +38,17 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "chai": "^4.3.7",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4",
-    "chai": "^4.3.7",
     "http-server": "^14.1.1",
     "mocha": "^10.2.0",
     "mocha-headless-chrome": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "start-server-and-test": "^2.0.3"
+    "start-server-and-test": "^2.0.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4",
+    "vite-plugin-cross-origin-isolation": "^0.1.6"
   }
 }
